package main;

public class RegularUser extends User{
    public RegularUser(String userName, String password, String name) {
        super(userName, password, name);
    }
}
